# journal2riemann

./: LICENSE  Makefile.am  README.md  configure.ac
builder/: Dockerfile  builder.sh
src/: main.c
